Commit for the lab on supervised learning evaluation

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -336,13 +336,35 @@
        "[506 rows x 14 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'RAD', 'TAX',\n",
+       "       'PTRATIO', 'B', 'LSTAT', 'MEDV'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.keys()"
    ]
   },
   {
@@ -360,7 +382,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here :"
+    "# Defining x and y (target)\n",
+    "X = data[['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'RAD', 'TAX',\n",
+    "       'PTRATIO', 'B', 'LSTAT']]\n",
+    "y = data['MEDV']\n",
+    "\n",
+    "# Splitting the data\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, \n",
+    "    test_size=0.2,      # 20% for testing (common: 0.2, 0.25, 0.3)\n",
+    "    random_state=42     # ALWAYS set for reproducibility!\n",
+    ")"
    ]
   },
   {
@@ -374,9 +408,40 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients: [-1.13055924e-01  3.01104641e-02  4.03807204e-02  2.78443820e+00\n",
+      " -1.72026334e+01  4.43883520e+00 -6.29636221e-03 -1.44786537e+00\n",
+      "  2.62429736e-01 -1.06467863e-02 -9.15456240e-01  1.23513347e-02\n",
+      " -5.08571424e-01]\n",
+      "Intercept: 30.24675099392349\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Access learned parameters\n",
+    "print(f\"Coefficients: {model.coef_}\")\n",
+    "print(f\"Intercept: {model.intercept_}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here :"
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "y_pred_test = model.predict(X_test)\n",
+    "y_pred_train = model.predict(X_train)"
    ]
   },
   {
@@ -388,11 +453,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² score for the training set is: 0.751\n",
+      "R² score for the testing set is: 0.669\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "r2_test = r2_score(y_test, y_pred_test)\n",
+    "r2_train = r2_score(y_train, y_pred_train)\n",
+    "print(f\"R² score for the training set is: {r2_train:.3f}\")\n",
+    "print(f\"R² score for the testing set is: {r2_test:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔍 OVERFITTING CHECK:\n",
+      "  ⚠️ Slight overfitting (R² diff = 0.082)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n🔍 OVERFITTING CHECK:\")\n",
+    "r2_diff = r2_train - r2_test\n",
+    "if r2_diff < 0.05:\n",
+    "    print(f\"  ✓ No significant overfitting (R² diff = {r2_diff:.3f})\")\n",
+    "elif r2_diff < 0.15:\n",
+    "    print(f\"  ⚠️ Slight overfitting (R² diff = {r2_diff:.3f})\")\n",
+    "else:\n",
+    "    print(f\"  ❌ Significant overfitting (R² diff = {r2_diff:.3f})\")"
    ]
   },
   {
@@ -404,11 +507,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE for the training set is: 4.652\n",
+      "RMSE for the testing set is: 4.929\n",
+      "RMSE as % of range: \n",
+      " for training dataset 10.34% \n",
+      " for testing dataset 10.95%\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "from sklearn.metrics import mean_squared_error\n",
+    "import numpy as np\n",
+    "\n",
+    "rmse_train = np.sqrt(mean_squared_error(y_train, y_pred_train))\n",
+    "rmse_test = np.sqrt(mean_squared_error(y_test, y_pred_test))\n",
+    "print(f\"RMSE for the training set is: {rmse_train:.3f}\")\n",
+    "print(f\"RMSE for the testing set is: {rmse_test:.3f}\")\n",
+    "\n",
+    "# Judge quality\n",
+    "target_range = y.max() - y.min()\n",
+    "rmse_train_pct = (rmse_train / target_range) * 100\n",
+    "rmse_test_pct = (rmse_test / target_range) * 100\n",
+    "print(f\"RMSE as % of range: \\n for training dataset {rmse_train_pct:.2f}% \\n for testing dataset {rmse_test_pct:.2f}%\")\n"
    ]
   },
   {
@@ -420,11 +547,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE for testing dataset: 3.189\n",
+      "MAE for training dataset: 3.315\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "mae_test = mean_absolute_error(y_test, y_pred_test)\n",
+    "print(f\"MAE for testing dataset: {mae_test:.3f}\")\n",
+    "\n",
+    "mae_train = mean_absolute_error(y_train, y_pred_train)\n",
+    "print(f\"MAE for training dataset: {mae_train:.3f}\")"
    ]
   },
   {
@@ -436,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -500,26 +642,22 @@
       "type of iris plant.  One class is linearly separable from the other 2; the\n",
       "latter are NOT linearly separable from each other.\n",
       "\n",
-      "|details-start|\n",
-      "**References**\n",
-      "|details-split|\n",
+      ".. dropdown:: References\n",
       "\n",
-      "- Fisher, R.A. \"The use of multiple measurements in taxonomic problems\"\n",
-      "  Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
-      "  Mathematical Statistics\" (John Wiley, NY, 1950).\n",
-      "- Duda, R.O., & Hart, P.E. (1973) Pattern Classification and Scene Analysis.\n",
-      "  (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
-      "- Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
-      "  Structure and Classification Rule for Recognition in Partially Exposed\n",
-      "  Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
-      "  Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
-      "- Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
-      "  on Information Theory, May 1972, 431-433.\n",
-      "- See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
-      "  conceptual clustering system finds 3 classes in the data.\n",
-      "- Many, many more ...\n",
-      "\n",
-      "|details-end|\n",
+      "  - Fisher, R.A. \"The use of multiple measurements in taxonomic problems\"\n",
+      "    Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
+      "    Mathematical Statistics\" (John Wiley, NY, 1950).\n",
+      "  - Duda, R.O., & Hart, P.E. (1973) Pattern Classification and Scene Analysis.\n",
+      "    (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
+      "  - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
+      "    Structure and Classification Rule for Recognition in Partially Exposed\n",
+      "    Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
+      "    Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
+      "  - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
+      "    on Information Theory, May 1972, 431-433.\n",
+      "  - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
+      "    conceptual clustering system finds 3 classes in the data.\n",
+      "  - Many, many more ...\n",
       "\n"
      ]
     }
@@ -530,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +816,7 @@
        "[150 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +845,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +865,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,11 +885,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here :"
+    "# Splitting the data\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    df, target, \n",
+    "    test_size=0.2,      # 20% for testing (common: 0.2, 0.25, 0.3)\n",
+    "    random_state=42     # ALWAYS set for reproducibility!\n",
+    ")"
    ]
   },
   {
@@ -763,11 +908,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here :"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "log_reg = LogisticRegression()\n",
+    "log_reg.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_test = log_reg.predict(X_test)\n",
+    "y_pred_train = log_reg.predict(X_train)"
    ]
   },
   {
@@ -779,11 +930,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here :"
+    "from sklearn.metrics import (accuracy_score, balanced_accuracy_score, \n",
+    "                             precision_score, recall_score, f1_score, \n",
+    "                             confusion_matrix)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Scores:\n",
+      "Training Accuracy: 0.975\n",
+      "Testing Accuracy: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accuracy measures how many predictions the model got correct out of all predictions made.\n",
+    "print(\"Accuracy Scores:\")\n",
+    "print(f\"Training Accuracy: {accuracy_score(y_train, y_pred_train)}\")\n",
+    "print(f\"Testing Accuracy: {accuracy_score(y_test, y_pred_test)}\")"
    ]
   },
   {
@@ -795,11 +970,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Balanced Accuracy Scores:\n",
+      "Training Balanced Accuracy: 0.975609756097561\n",
+      "Testing Balanced Accuracy: 1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Balanced Accuracy is particularly useful for imbalanced datasets. It's the average of sensitivity (recall) and specificity\n",
+    "print(\"\\nBalanced Accuracy Scores:\")\n",
+    "print(f\"Training Balanced Accuracy: {balanced_accuracy_score(y_train, y_pred_train)}\")\n",
+    "print(f\"Testing Balanced Accuracy: {balanced_accuracy_score(y_test, y_pred_test)}\")"
    ]
   },
   {
@@ -811,11 +1000,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Precision Scores:\n",
+      "Training Precision: 0.9767857142857144\n",
+      "Testing Precision: 1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Precision answers: \"Of all the items predicted as positive, how many are truly positive?\". Since the target variable has more than 2 classes (non-binary), we need to add the decision how to train the average. It can be weighed (depending on the size of the classes) or macro.\n",
+    "print(\"\\nPrecision Scores:\")\n",
+    "print(f\"Training Precision: {precision_score(y_train, y_pred_train, average='weighted')}\")\n",
+    "print(f\"Testing Precision: {precision_score(y_test, y_pred_test, average='weighted')}\")"
    ]
   },
   {
@@ -827,11 +1030,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Recall Scores:\n",
+      "Training Recall: 0.975\n",
+      "Testing Recall: 1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Recall (also called Sensitivity or True Positive Rate) measures the percentage of actual positive cases the classifier successfully found.\n",
+    "print(\"\\nRecall Scores:\")\n",
+    "print(f\"Training Recall: {recall_score(y_train, y_pred_train, average='weighted')}\")\n",
+    "print(f\"Testing Recall: {recall_score(y_test, y_pred_test, average='weighted')}\")"
    ]
   },
   {
@@ -843,11 +1060,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "F1 Scores:\n",
+      "Training F1: 0.9749882794186592\n",
+      "Testing F1: 1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# F1 Score is the harmonic mean of precision and recall.\n",
+    "print(\"\\nF1 Scores:\")\n",
+    "print(f\"Training F1: {f1_score(y_train, y_pred_train, average='weighted')}\")\n",
+    "print(f\"Testing F1: {f1_score(y_test, y_pred_test, average='weighted')}\")"
    ]
   },
   {
@@ -859,11 +1090,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Confusion Matrix - Training:\n",
+      "[[40  0  0]\n",
+      " [ 0 38  3]\n",
+      " [ 0  0 39]]\n",
+      "\n",
+      "Confusion Matrix - Testing:\n",
+      "[[10  0  0]\n",
+      " [ 0  9  0]\n",
+      " [ 0  0 11]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "print(\"\\nConfusion Matrix - Training:\")\n",
+    "cm_train = confusion_matrix(y_train, y_pred_train)\n",
+    "print(cm_train)\n",
+    "\n",
+    "print(\"\\nConfusion Matrix - Testing:\")\n",
+    "cm_test = confusion_matrix(y_test, y_pred_test)\n",
+    "print(cm_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Confusion Matrix - Testing:\n",
+      "    0  1   2\n",
+      "0  10  0   0\n",
+      "1   0  9   0\n",
+      "2   0  0  11\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nConfusion Matrix - Testing:\")\n",
+    "# Create confusion matrix with labels\n",
+    "cm_test = confusion_matrix(y_test, y_pred_test)\n",
+    "class_names = np.unique(y_test)  # Get your class names\n",
+    "\n",
+    "# Display as DataFrame\n",
+    "cm_df = pd.DataFrame(cm_test, \n",
+    "                     index=class_names, \n",
+    "                     columns=class_names)\n",
+    "print(cm_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Confusion Matrix - Training:\n",
+      "    0   1   2\n",
+      "0  40   0   0\n",
+      "1   0  38   3\n",
+      "2   0   0  39\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nConfusion Matrix - Training:\")\n",
+    "cm_train = confusion_matrix(y_train, y_pred_train)\n",
+    "\n",
+    "# Display as DataFrame\n",
+    "cm_df2 = pd.DataFrame(cm_train, \n",
+    "                     index=class_names, \n",
+    "                     columns=class_names)\n",
+    "print(cm_df2)\n"
    ]
   },
   {
@@ -885,7 +1199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -899,7 +1213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
